# hsdns

./: .gitignore  .monotonerc  .mtn-ignore  .todo  .travis.yml  ADNS.hs  ADNS.hsc  Makefile  PollResolver.hs  README  README.md  cabal.project  hsdns.cabal  makefile  package.conf.in  prologue.txt  test.hs
.github/workflows/: haskell-ci.yml
ADNS/: Base.hsc  Endian.hs  Resolver.hs
Data/: Endian.hs
Network/: DNS.hs
Network/DNS/: ADNS.hsc  PollResolver.hs
Network/IP/: Address.hs
System/Posix/: GetTimeOfDay.hsc  Poll.hsc
example/: adns-reverse-lookup.hs  adns-srv-test.hs  adns-test-and-traverse.hs  test.hs
src/ADNS/: Resolver.hs
