Name:			hsdns
Version:		1.0
Author:			Peter Simons <simons@cryp.to>
License:		LGPL
Homepage:		http://cryp.to/hsdns/
Description:		Asynchronous DNS Resolver
Category:		Foreign, Network
Build-Depends:		base, network
Extensions:		ForeignFunctionInterface
Extra-Libraries:	adns
Includes:		"<adns.h>", "<errno.h>"
Exposed-Modules:	ADNS,
			ADNS.Base,
			ADNS.Endian,
			ADNS.Resolver
GHC-Options:		-O -Wall

Data-Files:		README, prologue.txt

Executable:		adns-reverse-lookup
Hs-Source-Dirs:		example, .
Main-Is:		adns-reverse-lookup.hs
Extra-Libraries:	adns
